# maybe-async-channel

./: Cargo.toml  README.md
maybe-async-proc-macro/: Cargo.toml
maybe-async-proc-macro/src/: lib.rs
maybe-async-proc-macro/tests/: maybe_sleep.rs
maybe-async-std/: Cargo.toml
maybe-async-std/src/: lib.rs
maybe-async-std/tests/: maybe_alloc_fail.rs  maybe_sleep.rs
src/: lib.rs
tests/: test.rs
