[package]
name = "maybe-async-channel"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/maybe-async-channel"
documentation = "https://docs.rs/maybe-async-channel"
description = "A channel which may or may not be async"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-channel = "1.8.0"
crossbeam-channel = "0.5.6"

[dev-dependencies]
